Use LiberTEM master for now until features are merged

--- a/bullseye-poly.ipynb
+++ b/bullseye-poly.ipynb
@@ -206,7 +206,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 9.36 s\n"
+      "Wall time: 9.6 s\n"
      ]
     }
    ],
@@ -1016,7 +1016,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x15203fd1dc8>"
+       "<matplotlib.image.AxesImage at 0x19b8015c648>"
       ]
      },
      "execution_count": 11,
@@ -1045,7 +1045,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 2.12 s\n"
+      "Wall time: 1.95 s\n"
      ]
     }
    ],
@@ -1854,7 +1854,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x15203fe97c8>"
+       "<matplotlib.image.AxesImage at 0x19bdcafc588>"
       ]
      },
      "execution_count": 13,
@@ -2731,7 +2731,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1520409c788>"
+       "<matplotlib.image.AxesImage at 0x19b8355a108>"
       ]
      },
      "execution_count": 15,
@@ -2776,13 +2776,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#  TODO use this as soon as released PR #571\n",
-    "# corrmap = blb.correlation.get_correlation(ls_data, corr)\n",
-    "\n",
-    "spec_mask = corr.get_template(sig_shape=ls_data.shape)\n",
-    "spec_sum = np.fft.rfft2(ls_data)\n",
-    "corrspec = spec_mask * spec_sum\n",
-    "corrmap = np.fft.fftshift(np.fft.irfft2(corrspec))"
+    "corrmap = blb.correlation.get_correlation(ls_data, corr)"
    ]
   },
   {
@@ -3585,7 +3579,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x152050b1e88>"
+       "<matplotlib.image.AxesImage at 0x19b835a2a48>"
       ]
      },
      "execution_count": 18,
@@ -4407,7 +4401,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x15203af79c8>"
+       "<matplotlib.image.AxesImage at 0x19b845bedc8>"
       ]
      },
      "execution_count": 20,
@@ -4428,7 +4422,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.patches.Circle at 0x152050ff908>"
+       "<matplotlib.patches.Circle at 0x19b845fdac8>"
       ]
      },
      "execution_count": 21,
@@ -4458,7 +4452,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 17.7 s\n"
+      "Wall time: 21.6 s\n"
      ]
     }
    ],
@@ -5266,7 +5260,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x15205266688>"
+       "<matplotlib.image.AxesImage at 0x19b84715408>"
       ]
      },
      "execution_count": 23,
@@ -5285,11 +5279,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO use get_correlation() as soon as it is released\n",
     "logscale_std = np.log(stddev_result['std'] - np.min(stddev_result['std']) + 1)\n",
-    "spec_sum_std = np.fft.rfft2(logscale_std)\n",
-    "corrspec_std = spec_mask * spec_sum_std\n",
-    "corrmap_std = np.fft.fftshift(np.fft.irfft2(corrspec_std))"
+    "corrmap_std = blb.correlation.get_correlation(logscale_std, corr)"
    ]
   },
   {
@@ -6103,7 +6094,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x152051260c8>"
+       "<matplotlib.image.AxesImage at 0x19b84619388>"
       ]
      },
      "execution_count": 26,
@@ -6144,7 +6135,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 22.8 s\n"
+      "Wall time: 23 s\n"
      ]
     }
    ],
